--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -4,6 +4,7 @@
 
 @import "./components/forms.scss";
 @import "./components/buttons.scss";
+@import "./components/navbar.scss";
 
 * {
   box-sizing: border-box;
@@ -27,6 +28,7 @@ code {
 
 a {
   text-decoration: none;
+  color: $color-primary;
 }
 
 ul {
