--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./components/forms.scss";
 @import "./components/buttons.scss";
 @import "./components/navbar.scss";
+@import "./components/posts.scss";
 
 * {
   box-sizing: border-box;
