--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -6,9 +6,11 @@
 @import "./components/buttons.scss";
 @import "./components/navbar.scss";
 @import "./components/posts.scss";
+@import "./components/editor.scss";
 
 @import "./pages/post.scss";
 @import "./pages/dashboard.scss";
+@import "./pages/post-form.scss";
 
 * {
   box-sizing: border-box;
@@ -41,4 +43,75 @@ ul {
 
 img {
   width: 100%;
+}
+
+*:placeholder-shown {
+  font-style: italic;
+}
+
+[type="file"] {
+  height: 0;
+  overflow: hidden;
+  width: 0;
+}
+
+[type="file"] + label {
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  outline: none;
+  padding: 1rem 50px;
+  position: relative;
+  transition: all 0.3s;
+  vertical-align: middle;
+
+  &.btn-3 {
+    background-color: $color-primary;
+    border-radius: 3px;
+    overflow: hidden;
+    display: flex;
+    place-items: center;
+    margin-top: 0.75rem;
+
+    span {
+      display: inline-block;
+      height: 100%;
+      transition: all 0.3s;
+      width: 100%;
+    }
+
+    &::before {
+      color: $color-white;
+      display: flex;
+      place-items: center;
+      content: "\f382";
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      font-size: 100%;
+      height: 100%;
+      left: 42.5%;
+      line-height: 2.6;
+      position: absolute;
+      top: -180%;
+      transition: all 0.3s;
+      width: 100%;
+    }
+
+    &:hover {
+      background-color: lighten($color-primary, 10%);
+
+      span {
+        transform: translateY(300%);
+      }
+
+      &::before {
+        top: 0;
+      }
+    }
+  }
 }
