--- a/client/src/scss/components/_editor.scss
+++ b/client/src/scss/components/_editor.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   max-width: 65rem;
   margin: 0 auto;
+  margin-bottom: 4rem;
   &__preview {
     margin-bottom: 5rem;
     border-top: 1px solid $color-primary;
