--- a/client/src/scss/pages/_post.scss
+++ b/client/src/scss/pages/_post.scss
@@ -3,6 +3,7 @@
   padding: 2rem;
   margin-left: 16rem;
   margin-right: 16rem;
+  margin-bottom: 2rem;
   .post-image {
     display: flex;
     place-items: center;
