Added comments on frontend

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -7,6 +7,8 @@
 @import "./components/navbar.scss";
 @import "./components/posts.scss";
 @import "./components/editor.scss";
+@import "./components/comment-form";
+@import "./components/comment.scss";
 
 @import "./pages/post.scss";
 @import "./pages/dashboard.scss";
