Added modifications to the comment state and reply button

--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -33,3 +33,11 @@
     border: #000 1px solid;
   }
 }
+
+.reply-btn {
+  background: none;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  color: $color-gray;
+}
