--- a/client/src/scss/components/_comment.scss
+++ b/client/src/scss/components/_comment.scss
@@ -1,30 +1,3 @@
-.comment-container {
-  //   border: 1px solid $color-gray;
-  border-radius: 5px;
-  display: flex;
-  padding-left: 0.25rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  width: 100%;
-  &__content {
-    display: flex;
-    justify-content: right;
-  }
-}
-
-.comment-meta {
-  display: flex;
-  &__date {
-    margin-right: auto;
-    color: $color-gray;
-    font-size: 0.75rem;
-  }
-  .reply {
-    margin-right: 0.5rem;
-    font-size: 0.75rem;
-  }
-}
-
 .comments-container {
   border-left: 1px solid $color-primary;
   padding-left: 0.5rem;
@@ -34,4 +7,45 @@
   flex-direction: column;
   margin-top: 1rem;
   flex-grow: 1;
+  width: 100%;
+  .comment-container {
+    //   border: 1px solid $color-gray;
+    border-radius: 5px;
+    display: flex;
+    padding-left: 0.25rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    width: 100%;
+    flex-grow: 1;
+    &__content {
+      width: 100%;
+      display: flex;
+      justify-content: right;
+      flex-grow: 1;
+    }
+  }
+  .comment-meta {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    flex-grow: 1;
+    &__date {
+      width: 100%;
+      display: flex;
+      justify-content: left;
+      margin-right: auto;
+      color: $color-gray;
+      font-size: 0.75rem;
+    }
+    .reply {
+      display: flex;
+      justify-content: right;
+      width: 100%;
+      margin-right: 0.5rem;
+      font-size: 0.75rem;
+    }
+  }
+  .comments-container {
+    width: 100%;
+  }
 }
