Some profile thunks work

--- a/client/src/scss/util/_variables.scss
+++ b/client/src/scss/util/_variables.scss
@@ -2,6 +2,7 @@
 
 $color-white: #fff;
 $color-gray: #7e7e7e;
+$color-light-gray: #eee;
 $color-black: #000;
 
 //Main color palette: "So Many Lost Songs"| Credit: https://www.color-hex.com/color-palette/41166
