--- a/client/src/scss/components/_editor.scss
+++ b/client/src/scss/components/_editor.scss
@@ -33,3 +33,42 @@
     margin-bottom: 1rem;
   }
 }
+
+.file-input {
+  display: flex;
+  place-items: center;
+  background: $color-white;
+  padding: 1rem;
+  position: relative;
+  border-radius: 3px;
+  & > [type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 10;
+    cursor: pointer;
+  }
+  & > .button {
+    display: inline-block;
+    cursor: pointer;
+    background: $color-light-gray;
+    padding: 8px 16px;
+    border-radius: 2px;
+    margin-right: 8px;
+  }
+  &:hover > .button {
+    background: $color-primary;
+    color: white;
+  }
+  & > .label {
+    color: $color-gray;
+    white-space: nowrap;
+    opacity: 0.3;
+  }
+  & > .label {
+    opacity: 1;
+  }
+}
