Massively improved editor component

--- a/client/src/scss/components/_comment-form.scss
+++ b/client/src/scss/components/_comment-form.scss
@@ -1,6 +1,6 @@
 .comment-main {
   margin-top: 1rem;
-  border-top: 1px solid $color-primary;
+  border-top: 1px solid $color-black;
   display: flex;
   flex-direction: column;
 
