--- a/client/src/scss/components/_comment.scss
+++ b/client/src/scss/components/_comment.scss
@@ -1,5 +1,5 @@
 .comments-container {
-  border-left: 1px solid $color-primary;
+  border-left: 1px solid $color-black;
   padding-left: 0.5rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
