--- a/client/src/scss/components/_forms.scss
+++ b/client/src/scss/components/_forms.scss
@@ -1,5 +1,5 @@
 .form-wrapper {
-  border: 1px solid $color-primary;
+  border: 1px solid $color-black;
   border-radius: 3px;
   width: min-content;
   display: flex;
