--- a/client/src/scss/components/_settings.scss
+++ b/client/src/scss/components/_settings.scss
@@ -1,6 +1,6 @@
 .settings-container {
   display: flex;
-  border: 1px solid $color-primary;
+  border: 1px solid $color-black;
   font-family: inherit;
   margin: 5rem;
   place-items: center;
