--- a/client/src/scss/pages/_post.scss
+++ b/client/src/scss/pages/_post.scss
@@ -1,5 +1,5 @@
 .post-page {
-  border: 1px solid $color-primary;
+  border: 1px solid $color-black;
   padding: 2rem;
   margin-left: 16rem;
   margin-right: 16rem;
@@ -12,7 +12,7 @@
     display: flex;
     place-items: center;
     margin-bottom: 1rem;
-    border-bottom: 1px solid $color-primary;
+    border-bottom: 1px solid $color-black;
     padding: 1rem;
   }
   .post-title {
