--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -1,19 +1,17 @@
 .btn {
   background: $color-white;
-  color: $color-primary;
+  color: $color-black;
 
-  border: 1px solid $color-primary;
+  border: 1px solid $color-black;
   cursor: pointer;
   font-size: 1rem;
   padding: 0.5rem;
   outline: none;
-  transition: all 0.3s ease-in;
-  border-radius: 3px;
   &.btn-action {
-    @include set-background($color-primary);
+    @include set-background($color-black);
     &:hover {
       background: $color-white;
-      color: set-text-color($color-white, $color-primary);
+      color: set-text-color($color-white, $color-black);
     }
   }
   &.btn-confirm {
@@ -43,5 +41,5 @@
 }
 
 .reply-highlight {
-  color: $color-primary;
+  color: $color-black;
 }
