--- a/client/src/scss/components/_editor.scss
+++ b/client/src/scss/components/_editor.scss
@@ -24,6 +24,7 @@
     .editor__meta {
       display: flex;
       place-items: center;
+      margin-bottom: 1rem;
       &-file,
       &-dropdown,
       &-chips {
