--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/comment.scss";
 @import "./components/settings.scss";
 @import "./components/profile.scss";
+@import "./components/alert.scss";
 
 @import "./pages/post.scss";
 @import "./pages/dashboard.scss";
