--- a/client/src/scss/util/_variables.scss
+++ b/client/src/scss/util/_variables.scss
@@ -15,8 +15,8 @@ $color-accent: #851e3e;
 
 //Alert colors
 
-$color-success: #4bb543;
-$color-danger: #ff7070;
+$color-success: rgba(63, 191, 63, 0.55);
+$color-danger: rgba(191, 63, 63, 0.55);
 
 //Screen sizes
 
