--- a/client/src/scss/components/_forms.scss
+++ b/client/src/scss/components/_forms.scss
@@ -29,6 +29,7 @@
           padding: 0.1rem;
         }
         & > button {
+          margin-top: 1rem;
           width: 100%;
         }
       }
