Modified post schema and Text Editor

--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -47,3 +47,10 @@
 .reply-highlight {
   color: $color-black;
 }
+
+.alert-dismiss {
+  text-decoration: underline;
+  border: none;
+  cursor: pointer;
+  background: none;
+}
