--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -12,16 +12,16 @@
 @import "./components/settings.scss";
 @import "./components/profile.scss";
 @import "./components/alert.scss";
+@import "./components/categories.scss";
 
 @import "./pages/post.scss";
 @import "./pages/dashboard.scss";
 @import "./pages/post-form.scss";
-
+@import "./pages/landing.scss";
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Source Sans Pro";
 }
 
 body {
@@ -72,70 +72,3 @@ input {
   border: none;
   border-bottom: 1px solid $color-black;
 }
-
-// [type="file"] {
-//   height: 0;
-//   overflow: hidden;
-//   width: 0;
-// }
-
-// [type="file"] + label {
-//   border: none;
-//   border-radius: 5px;
-//   color: #fff;
-//   cursor: pointer;
-//   display: inline-block;
-//   font-size: inherit;
-//   font-weight: 500;
-//   margin-bottom: 1rem;
-//   outline: none;
-//   padding: 1rem 50px;
-//   position: relative;
-//   transition: all 0.3s;
-//   vertical-align: middle;
-
-//   &.btn-3 {
-//     background-color: $color-black;
-//     border-radius: 3px;
-//     overflow: hidden;
-//     display: flex;
-//     place-items: center;
-//     margin-top: 0.75rem;
-
-//     span {
-//       display: inline-block;
-//       height: 100%;
-//       transition: all 0.3s;
-//       width: 100%;
-//     }
-
-//     &::before {
-//       color: $color-white;
-//       display: flex;
-//       place-items: center;
-//       content: "\f382";
-//       font-family: "Font Awesome 5 Free";
-//       font-weight: 900;
-//       font-size: 100%;
-//       height: 100%;
-//       left: 42.5%;
-//       line-height: 2.6;
-//       position: absolute;
-//       top: -180%;
-//       transition: all 0.3s;
-//       width: 100%;
-//     }
-
-//     &:hover {
-//       background-color: lighten($color-black, 10%);
-
-//       span {
-//         transform: translateY(300%);
-//       }
-
-//       &::before {
-//         top: 0;
-//       }
-//     }
-//   }
-// }
