--- a/client/src/scss/components/_profile.scss
+++ b/client/src/scss/components/_profile.scss
@@ -1,60 +1,116 @@
+// .profile-wrapper {
+//   width: 100%;
+//   margin-top: 20px;
+//   .profile-card {
+//     margin: 0 auto;
+//     // width: 350px;
+//     // height: 400px;
+//     margin-left: 10rem;
+//     margin-right: 10rem;
+//     position: relative;
+//     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22), 0 14px 56px rgba(0, 0, 0, 0.25);
+//     .card__header {
+//       width: 100%;
+//       height: 10rem;
+//     }
+//     .card__image {
+//       display: flex;
+//       place-items: center;
+//       width: 125px;
+//       height: 125px;
+//       margin-left: -62.5px;
+//       position: absolute;
+//       left: 50%;
+//       top: 100px;
+//       border-radius: 50%;
+//       border: 1px solid #cccccc;
+//       & > img {
+//         min-width: 100%;
+//         min-height: 100%;
+//         border-radius: 50%;
+//         // cursor: pointer;
+//         -webkit-filter: grayscale(100%);
+//         filter: grayscale(100%);
+//         -webkit-transition: all 0.2s ease-in-out;
+//         -moz-transition: all 0.2s ease-in-out;
+//         transition: all 0.2s ease-in-out;
+//         // &:hover {
+//         //   -webkit-filter: grayscale(0%);
+//         //   filter: grayscale(0%);
+//         // }
+//       }
+//     }
+//     .card__info {
+//       background-color: $color-light-gray;
+//       height: 100%;
+//       .details {
+//         display: flex;
+//         flex-direction: column;
+//         place-items: center;
+//         &__text-header {
+//           margin-top: 5rem;
+//         }
+//       }
+//       &-section {
+//         display: flex;
+//         justify-content: space-between;
+//         border-bottom: 1px solid $color-black;
+//       }
+//     }
+//   }
+// }
+
 .profile-wrapper {
-  width: 100%;
-  margin-top: 20px;
-  .profile-card {
-    margin: 0 auto;
-    // width: 350px;
-    // height: 400px;
-    margin-left: 10rem;
-    margin-right: 10rem;
+  margin: 0 auto;
+  display: flex;
+  place-items: center;
+  width: 40rem;
+  .profile-main {
     position: relative;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22), 0 14px 56px rgba(0, 0, 0, 0.25);
-    .card__header {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    width: 40rem;
+    // margin: 0 auto;
+    @media (max-width: 700px) {
+      margin-left: 0rem;
+      margin-right: 0rem;
       width: 100%;
-      height: 10rem;
     }
-    .card__image {
+
+    &__meta {
+      width: 100%;
       display: flex;
-      place-items: center;
-      width: 125px;
-      height: 125px;
-      margin-left: -62.5px;
-      position: absolute;
-      left: 50%;
-      top: 100px;
-      border-radius: 50%;
-      border: 1px solid #cccccc;
-      & > img {
-        min-width: 100%;
-        min-height: 100%;
-        border-radius: 50%;
-        // cursor: pointer;
-        -webkit-filter: grayscale(100%);
-        filter: grayscale(100%);
-        -webkit-transition: all 0.2s ease-in-out;
-        -moz-transition: all 0.2s ease-in-out;
-        transition: all 0.2s ease-in-out;
-        // &:hover {
-        //   -webkit-filter: grayscale(0%);
-        //   filter: grayscale(0%);
-        // }
+      flex-direction: column;
+      justify-content: left;
+      align-items: left;
+      margin-top: 3rem;
+      margin-left: 1rem;
+      .meta__bio {
+        margin-top: 0.5rem;
       }
     }
-    .card__info {
-      background-color: $color-light-gray;
-      height: 100%;
-      .details {
-        display: flex;
-        flex-direction: column;
-        place-items: center;
-        &__text-header {
-          margin-top: 5rem;
-        }
+
+    &__head {
+      flex-direction: column;
+      width: 100%;
+
+      .head__background {
+        width: 100%;
+        height: 10rem;
       }
-      &-section {
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 1px solid $color-black;
+      .head__image {
+        position: absolute;
+        top: 7.5rem;
+        left: 3rem;
+        @media (max-width: 700px) {
+        }
+
+        .image-profile {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 50%;
+        }
       }
     }
   }
@@ -97,8 +153,6 @@
       grid-column: 1/5;
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
-    }
-    &-social {
     }
   }
 }
