--- a/client/src/scss/components/_posts.scss
+++ b/client/src/scss/components/_posts.scss
@@ -28,3 +28,14 @@
     }
   }
 }
+
+.userposts-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.post-profile {
+  display: flex;
+  flex-direction: column;
+}
