--- a/client/src/scss/components/_profile.scss
+++ b/client/src/scss/components/_profile.scss
@@ -1,80 +1,23 @@
-// .profile-wrapper {
-//   width: 100%;
-//   margin-top: 20px;
-//   .profile-card {
-//     margin: 0 auto;
-//     // width: 350px;
-//     // height: 400px;
-//     margin-left: 10rem;
-//     margin-right: 10rem;
-//     position: relative;
-//     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22), 0 14px 56px rgba(0, 0, 0, 0.25);
-//     .card__header {
-//       width: 100%;
-//       height: 10rem;
-//     }
-//     .card__image {
-//       display: flex;
-//       place-items: center;
-//       width: 125px;
-//       height: 125px;
-//       margin-left: -62.5px;
-//       position: absolute;
-//       left: 50%;
-//       top: 100px;
-//       border-radius: 50%;
-//       border: 1px solid #cccccc;
-//       & > img {
-//         min-width: 100%;
-//         min-height: 100%;
-//         border-radius: 50%;
-//         // cursor: pointer;
-//         -webkit-filter: grayscale(100%);
-//         filter: grayscale(100%);
-//         -webkit-transition: all 0.2s ease-in-out;
-//         -moz-transition: all 0.2s ease-in-out;
-//         transition: all 0.2s ease-in-out;
-//         // &:hover {
-//         //   -webkit-filter: grayscale(0%);
-//         //   filter: grayscale(0%);
-//         // }
-//       }
-//     }
-//     .card__info {
-//       background-color: $color-light-gray;
-//       height: 100%;
-//       .details {
-//         display: flex;
-//         flex-direction: column;
-//         place-items: center;
-//         &__text-header {
-//           margin-top: 5rem;
-//         }
-//       }
-//       &-section {
-//         display: flex;
-//         justify-content: space-between;
-//         border-bottom: 1px solid $color-black;
-//       }
-//     }
-//   }
-// }
-
 .profile-wrapper {
   margin: 0 auto;
   display: flex;
   place-items: center;
-  width: 40rem;
+  width: 50rem;
   .profile-main {
     position: relative;
     display: flex;
     flex-direction: column;
     place-items: center;
-    width: 40rem;
+    width: 100%;
     // margin: 0 auto;
     @media (max-width: 700px) {
       margin-left: 0rem;
       margin-right: 0rem;
+      width: 100%;
+    }
+
+    &__tabs {
+      margin-top: 0.5rem;
       width: 100%;
     }
 
