--- a/client/src/scss/util/_variables.scss
+++ b/client/src/scss/util/_variables.scss
@@ -13,9 +13,12 @@ $color-tertiary: #451e3e;
 $color-quaternary: #651e3e;
 $color-accent: #851e3e;
 
+$color-update: rgba(214, 176, 220, 0.8);
+
 //Alert colors
 
 $color-success: rgba(63, 191, 63, 0.55);
+$color-update: rgba(208, 159, 255, 0.8);
 $color-danger: rgba(191, 63, 63, 0.55);
 
 //Screen sizes
