Modified folder structure slightly

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./components/profile.scss";
 @import "./components/alert.scss";
 @import "./components/categories.scss";
+@import "./components/questions.scss";
 
 @import "./pages/post.scss";
 @import "./pages/dashboard.scss";
