--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -24,8 +24,14 @@
     }
   }
   &.btn-success {
-    border: none;
-    outline: none;
+    color: $color-success;
+    border: 1px solid $color-success;
+    @include set-background($color-success);
+    &:hover {
+      border: 1px solid $color-success;
+      background: $color-white;
+      color: set-text-color($color-white, $color-success);
+    }
   }
   &.btn-update {
     color: $color-update;
@@ -34,18 +40,35 @@
     &:hover {
       border: 1px solid $color-update;
       background: $color-white;
-
       color: set-text-color($color-white, $color-update);
     }
   }
   &.btn-danger {
     color: $color-danger;
-    border: 1px solid $color-white;
+    border: 1px solid $color-danger;
     @include set-background($color-danger);
     &:hover {
       border: 1px solid $color-danger;
       background: $color-white;
+      color: set-text-color($color-white, $color-danger);
+    }
+  }
+}
 
+.btn-secondary {
+  background: $color-white;
+  color: $color-black;
+
+  border: 1px solid $color-black;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5rem;
+  outline: none;
+  &__danger {
+    background: none;
+    &:hover {
+      border: 1px solid $color-danger;
+      background: none;
       color: set-text-color($color-white, $color-danger);
     }
   }
@@ -75,4 +98,98 @@
   border: none;
   cursor: pointer;
   background: none;
+}
+
+.pure-material-button-contained {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  border: none;
+  font-size: 1rem;
+  padding: 0.5rem;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  background-color: $color-success;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  &::-moz-focus-inner {
+    border: none;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: $color-success;
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    border-radius: 50%;
+    padding: 50%;
+    width: 32px;
+    height: 32px;
+    background-color: $color-transparent-white;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1);
+    transition: opacity 1s, transform 0.5s;
+  }
+  &:hover {
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),
+      0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+    &::before {
+      opacity: 0.08;
+    }
+    &:focus {
+      &::before {
+        opacity: 0.3;
+      }
+    }
+  }
+  &:focus {
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),
+      0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+    &::before {
+      opacity: 0.24;
+    }
+  }
+  &:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+      0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    &::after {
+      opacity: 0.32;
+      transform: translate(-50%, -50%) scale(0);
+      transition: transform 0s;
+    }
+  }
+  &:disabled {
+    color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
+    background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.12);
+    box-shadow: none;
+    cursor: initial;
+    &::before {
+      opacity: 0;
+    }
+    &::after {
+      opacity: 0;
+    }
+  }
+  &__success {
+  }
+  &__danger {
+  }
+  &__action {
+  }
 }
