--- a/client/src/scss/util/_variables.scss
+++ b/client/src/scss/util/_variables.scss
@@ -15,11 +15,14 @@ $color-accent: #851e3e;
 
 $color-update: rgba(214, 176, 220, 0.8);
 
+$color-transparent-black: rgba(0, 0, 0, 0.2);
+$color-transparent-white: rgba(255, 255, 255, 0.7);
+
 //Alert colors
 
-$color-success: rgba(63, 191, 63, 0.55);
+$color-success: rgb(63, 191, 63);
 $color-update: rgba(208, 159, 255, 0.8);
-$color-danger: rgba(191, 63, 63, 0.55);
+$color-danger: rgb(191, 63, 63);
 
 //Screen sizes
 
