--- a/client/src/scss/util/_variables.scss
+++ b/client/src/scss/util/_variables.scss
@@ -16,12 +16,12 @@ $color-accent: #851e3e;
 $color-update: rgba(214, 176, 220, 0.8);
 
 $color-transparent-black: rgba(0, 0, 0, 0.2);
-$color-transparent-white: rgba(255, 255, 255, 0.7);
+$color-transparent-white: rgba(255, 255, 255, 0.6);
 
 //Alert colors
 
-$color-success: rgb(63, 191, 63);
-$color-update: rgba(208, 159, 255, 0.8);
+$color-success: #03a9f4;
+$color-update: #9c27b0;
 $color-danger: rgb(191, 63, 63);
 
 //Screen sizes
