--- a/client/src/scss/components/_posts.scss
+++ b/client/src/scss/components/_posts.scss
@@ -10,6 +10,7 @@
   display: flex;
   place-items: center;
   flex-direction: column;
+  font-family: inherit;
   &__title {
     margin-top: 0.5rem;
     &:hover {
